chore: migrate to spring boot 4 (wip)